# cross-check

./: .gitignore  README.md  pyproject.toml
docs/: claude-code-integration.md
src/cross_check/: cli.py
