[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cross-check"
version = "1.0.0"
description = "9-model adversarial peer review panel for scientific claims and documents, via OpenRouter"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
license = {text = "MIT"}
authors = [{name = "Daniel Neef"}]
keywords = ["llm", "openrouter", "peer-review", "scientific-review", "adversarial", "multi-model"]

[project.urls]
Repository = "https://github.com/dneef-ai/cross-check"

[project.scripts]
cross-check = "cross_check.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
